--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\emanu\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "/opt/anaconda3/envs/witchat/bin/python"
 }
